syntax = "proto3";

package admin.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";
import "dict/service/v1/dict.proto";

// 字典管理服务
service DictService {
  // 分页查询主字典列表
  rpc ListDictMain (pagination.PagingRequest) returns (dict.service.v1.ListDictMainResponse) {
    option (google.api.http) = {
      get: "/admin/v1/dict-mains"
    };
  }

  // 查询主字典详情
  rpc GetDictMain (dict.service.v1.GetDictMainRequest) returns (dict.service.v1.DictMain) {
    option (google.api.http) = {
      get: "/admin/v1/dict-mains/{id}"
      additional_bindings {
        get: "/api/v1/dict-mains/code/{code}"
      }
    };
  }

  // 创建主字典
  rpc CreateDictMain (dict.service.v1.CreateDictMainRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/dict-mains"
      body: "*"
    };
  }

  // 更新主字典
  rpc UpdateDictMain (dict.service.v1.UpdateDictMainRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/dict-mains/{data.id}"
      body: "*"
    };
  }

  // 删除主字典
  rpc DeleteDictMain (dict.service.v1.BatchDeleteDictRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/dict-mains"
    };
  }


  // 分页查询子字典列表
  rpc ListDictItem (pagination.PagingRequest) returns (dict.service.v1.ListDictItemResponse) {
    option (google.api.http) = {
      get: "/admin/v1/dict-items"
    };
  }

  // 创建子字典
  rpc CreateDictItem (dict.service.v1.CreateDictItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/admin/v1/dict-items"
      body: "*"
    };
  }

  // 更新子字典
  rpc UpdateDictItem (dict.service.v1.UpdateDictItemRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/admin/v1/dict-items/{data.id}"
      body: "*"
    };
  }

  // 删除子字典
  rpc DeleteDictItem (dict.service.v1.BatchDeleteDictRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/admin/v1/dict-items"
    };
  }
}
